--- a/les4 Museum display/StyleDisplay.css
+++ b/les4 Museum display/StyleDisplay.css
@@ -33,4 +33,13 @@ h1 {
     font-size: 20px;
   }
  
+section {
+    /*background-color: lightblue;*/
+}
+
+footer {
+    background-color: #333;
+    color: #ccc;
+    padding: 10px 20px;
+}
   
