--- a/les4 Museum display/StyleDisplay.css
+++ b/les4 Museum display/StyleDisplay.css
@@ -3,6 +3,11 @@ body {
     background-color: rgb(98, 250, 199); 
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 nav {
     background-color:  green;
     height: 39px;
@@ -19,6 +24,7 @@ nav a {
 nav a:hover {
     background-color: teal;
 }
+
 h1 {
     clear: both;
     margin: 0;
